--- a/app/src/main/res/layout/fragment_all_posting.xml
+++ b/app/src/main/res/layout/fragment_all_posting.xml
@@ -7,11 +7,6 @@
     android:background="@color/grey"
     tools:context=".fragments.AllPostingFragment">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,5 +19,11 @@
             android:layout_below="@id/searchView"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <!-- moved outside the coordinator layout   -->
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
