--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,6 +40,7 @@
             app:titleTextColor="@color/white">
 
             <LinearLayout
+                android:id="@+id/profileLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="18dp"
