Loads posts but no post details, schedule session sends notification to own device but not post creator yet

--- a/app/src/main/res/layout/activity_select_posting.xml
+++ b/app/src/main/res/layout/activity_select_posting.xml
@@ -83,6 +83,7 @@
                     android:justificationMode="inter_word"/>
 
                 <TextView
+                    android:id="@+id/postingDescTextView"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
