--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -49,7 +49,6 @@
                 android:text="is looking for a tutor"
                 android:textSize="14sp"
                 android:textColor="@color/text_grey"/>
-
         </LinearLayout>
 
         <LinearLayout
@@ -59,16 +58,22 @@
             android:layout_marginTop="10dp"
             android:layout_below="@id/headerFramePosting">
 
-            <Button
-                android:id="@+id/tagPosting"
+            <LinearLayout
+                android:id="@+id/tagButtonsFrame"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:backgroundTint="@color/grey"
-                android:text="Topic 1"
-                android:textStyle="bold"
-                android:textColor="@color/blue"
-                android:textSize="10sp" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/tagButton1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:backgroundTint="@color/grey"
+                    android:text="Topic 1"
+                    android:textStyle="bold"
+                    android:textColor="@color/blue"
+                    android:textSize="10sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
