--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -74,6 +74,14 @@
                     android:textColor="@color/blue"
                     android:textSize="10sp" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/tagFrame2Posting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="left"
+                android:orientation="horizontal"/>
         </LinearLayout>
 
         <LinearLayout
