--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/userProfileUser"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity="center_vertical"
@@ -36,9 +37,10 @@
                     android:layout_marginLeft="110dp">
 
                     <TextView
+                        android:id="@+id/userFullnameUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yumi Therese Cruz"
+                        android:text="FirstName Lastname"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
